--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -76,7 +76,7 @@
         android:id="@+id/categoryRecycler"
         android:layout_width="121dp"
         android:layout_height="346dp"
-        android:layout_alignTop=""
+        android:layout_alignTop="@id/btnSearch"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
