--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbarSize="2dp">
@@ -18,14 +19,15 @@
             app:columnCount="7"
             app:layout_columnWeight="4"
             app:rowCount="2"
-            app:useDefaultMargins="true">
+            app:useDefaultMargins="true"
+            tools:ignore="MissingClass">
 
 
             <androidx.cardview.widget.CardView
                 android:layout_width="200dp"
                 android:layout_height="100dp"
                 app:cardBackgroundColor="#4C5058"
-                app:cardCornerRadius="5dp"
+                app:cardCornerRadius="7.5dp"
                 app:cardElevation="2dp"
                 app:layout_column="0"
                 app:layout_columnSpan="4"
@@ -37,7 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="Hot Deals"
+                    android:text="ALL"
                     android:textColor="@color/white"
                     android:textSize="30sp"
                     android:textStyle="bold" />
@@ -157,7 +159,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="View \nmore"
+                    android:text="Food"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
             </androidx.cardview.widget.CardView>
