--- a/app/src/main/res/layout/nav_layout.xml
+++ b/app/src/main/res/layout/nav_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/secondary"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
@@ -23,125 +23,73 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"
+        android:padding="10dp"
         android:text="name"
         android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textSize="24sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
         android:background="@color/colorPrimaryDark" />
 
     <TextView
         android:id="@+id/menu_home"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:drawableLeft="@drawable/ic_action_home"
-        android:drawableStart="@drawable/ic_action_home"
+        android:layout_marginEnd="10dp"
+        android:drawableStart="@drawable/ic_baseline_home_24"
+        android:drawableLeft="@drawable/ic_baseline_home_24"
         android:gravity="center|start"
+        android:padding="10dp"
         android:text=" Home"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/menu_hot"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:drawableLeft="@drawable/ic_action_hot"
-        android:drawableStart="@drawable/ic_action_hot"
-        android:gravity="center|start"
-        android:text=" Hot Deals"
-        android:textColor="@color/white"
-        android:textSize="16sp" />
-
-
-    <TextView
-        android:id="@+id/menu_cat"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:drawableLeft="@drawable/ic_action_categroy"
-        android:drawableStart="@drawable/ic_action_categroy"
-        android:gravity="center|start"
-        android:text=" Categories"
-        android:textColor="@color/white"
-        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/menu_cart"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:drawableStart="@drawable/ic_baseline_shopping_cart_18"
         android:drawableLeft="@drawable/ic_action_cart"
-        android:drawableStart="@drawable/ic_action_cart"
         android:gravity="center|start"
+        android:padding="10dp"
         android:text=" My Cart"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 
-
-    <TextView
-        android:id="@+id/menu_his"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:drawableLeft="@drawable/ic_action_history"
-        android:drawableStart="@drawable/ic_action_history"
-        android:gravity="center|start"
-        android:text=" History"
-        android:textColor="@color/white"
-        android:textSize="16sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="20dp"
         android:background="@color/colorPrimaryDark" />
-
-    <TextView
-        android:id="@+id/menu_about"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:drawableLeft="@drawable/ic_action_about"
-        android:drawableStart="@drawable/ic_action_about"
-        android:gravity="center|start"
-        android:text=" About"
-        android:textColor="@color/white"
-        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/menu_logout"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginEnd="10dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:drawableStart="@drawable/ic_baseline_power_settings_new_24"
         android:drawableLeft="@drawable/ic_action_logout"
-        android:drawableStart="@drawable/ic_action_logout"
         android:gravity="center|start"
+        android:padding="10dp"
         android:text=" Log out"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 
 
 </LinearLayout>
