--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
             android:inputType="textEmailAddress"
             android:nextFocusDown="@+id/passwordEditText"
             android:padding="10dp"
-            android:textColor="@color/Whitest"
+            android:textColor="#161e24"
             android:textColorHint="@color/hints_2"
             android:textColorLink="@color/colorPrimary"
             android:textSize="20sp"
@@ -49,7 +49,7 @@
             android:inputType="textPassword"
             android:nextFocusDown="@+id/passwordEditText"
             android:padding="10dp"
-            android:textColor="@color/Whitest"
+            android:textColor="#161e24"
             android:textColorHint="@color/hints_2"
             android:textColorLink="@color/colorPrimary"
             android:textSize="20sp"
@@ -63,10 +63,10 @@
             android:layout_width="140dp"
             android:layout_height="48dp"
             android:layout_marginBottom="36dp"
-            android:background="@color/secondary"
+            android:background="@drawable/rounded_corner"
             android:padding="10dp"
             android:text="Log in"
-            android:textColor="@color/Whitest"
+            android:textColor="#161e24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
