--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -50,7 +50,7 @@
             android:hint="Name"
             android:nextFocusDown="@+id/passwordEditText"
             android:padding="10dp"
-            android:textColor="@color/Whitest"
+            android:textColor="#161e24"
             android:textColorHint="@color/hints_2"
             android:textColorLink="@color/colorPrimary"
             android:textSize="20sp" />
@@ -67,7 +67,7 @@
             android:inputType="textEmailAddress"
             android:nextFocusDown="@+id/passwordEditText"
             android:padding="10dp"
-            android:textColor="@color/Whitest"
+            android:textColor="#161e24"
             android:textColorHint="@color/hints_2"
             android:textColorLink="@color/colorPrimary"
             android:textSize="20sp" />
@@ -84,7 +84,7 @@
             android:inputType="textPassword"
             android:nextFocusDown="@+id/passwordEditText"
             android:padding="10dp"
-            android:textColor="@color/Whitest"
+            android:textColor="#161e24"
             android:textColorHint="@color/hints_2"
             android:textColorLink="@color/colorPrimary"
             android:textSize="20sp" />
@@ -101,7 +101,7 @@
             android:inputType="textPassword"
             android:nextFocusDown="@+id/passwordEditText"
             android:padding="10dp"
-            android:textColor="@color/Whitest"
+            android:textColor="#161e24"
             android:textColorHint="@color/hints_2"
             android:textColorLink="@color/colorPrimary"
             android:textSize="20sp" />
@@ -113,9 +113,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:background="@drawable/rounded_corner"
+            android:backgroundTint="#1C4D9A"
             android:padding="10dp"
             android:text="Sign up"
-            android:textColor="@color/Whitest" />
+            android:textColor="#161e24"
+            app:iconTint="#540BC1" />
 
         <TextView
             android:id="@+id/loginTextView"
