--- a/app/src/main/res/layout/productdetails.xml
+++ b/app/src/main/res/layout/productdetails.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="fill_parent" android:layout_width="fill_parent"
-    android:background="#ffffff" android:orientation="vertical">
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:background="#ffffff"
+    android:orientation="vertical">
 
     <LinearLayout
 
@@ -9,6 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/LinearLayoutHeader"
         android:orientation="horizontal">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,7 +37,8 @@
     </LinearLayout>
 
 
-    <TextView android:layout_height="wrap_content"
+    <TextView
+        android:layout_height="wrap_content"
         android:id="@+id/TextViewProductDetails"
         android:layout_width="fill_parent"
         android:layout_margin="5dip"
@@ -65,9 +69,13 @@
 
 
     <LinearLayout android:layout_height="wrap_content"
-        android:layout_width="fill_parent" android:id="@+id/linearLayoutAddLayout"
-        android:orientation="horizontal" android:layout_margin="5dip">
-        <TextView android:id="@+id/textView1"
+        android:layout_width="fill_parent"
+        android:id="@+id/linearLayoutAddLayout"
+        android:orientation="horizontal"
+        android:layout_margin="5dip">
+
+        <TextView
+            android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quantity:"
@@ -94,5 +102,7 @@
             android:text="Set Quantity">
 
         </Button>
+
     </LinearLayout>
+
 </LinearLayout>
