Consolidated the work

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -61,9 +61,9 @@
 
 </LinearLayout>
 
-<androidx.linearlayout.widget.LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<!--<androidx.linearlayout.widget.LinearLayout-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent">-->
 
-</androidx.linearlayout.widget.LinearLayout>
+<!--</androidx.linearlayout.widget.LinearLayout>-->
 
