--- a/app/src/main/res/layout/productdetails.xml
+++ b/app/src/main/res/layout/productdetails.xml
@@ -1,94 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:layout_height="fill_parent"
     android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="#ffffff"
     android:orientation="vertical">
 
-    android:layout_height="fill_parent" android:layout_width="fill_parent"
-    android:background="#ffffff" android:orientation="vertical">
-
-
     <LinearLayout
 
+        android:id="@+id/LinearLayoutHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/LinearLayoutHeader"
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/ImageViewProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ImageViewProduct"
+            android:layout_margin="5dip"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
-            android:src="@drawable/shoe"
-            android:layout_margin="5dip">
+            android:src="@drawable/shoe">
 
         </ImageView>
 
-        <TextView android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView
             android:id="@+id/TextViewProductTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dip"
-            android:textSize="26dip"
             android:text="Dead or Alive"
-            android:textColor="#000000">
+            android:textColor="#000000"
+            android:textSize="26dip">
 
         </TextView>
 
     </LinearLayout>
 
-
     <TextView
-        android:layout_height="wrap_content"
-
-    <TextView android:layout_height="wrap_content"
-
         android:id="@+id/TextViewProductDetails"
+
         android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="5dip"
         android:layout_weight="1"
-        android:textColor="#000000"
+        android:text="Product description"
 
-        android:text="Product description">
+        android:textColor="#000000">
 
     </TextView>
 
     <LinearLayout
-        android:layout_height="wrap_content"
+        android:id="@+id/linearLayoutCurrentlyInCart"
         android:layout_width="fill_parent"
-        android:id="@+id/linearLayoutCurrentlyInCart">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textViewCurrentlyInCart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dip"
-            android:textColor="#000000"
+            android:layout_margin="5dip"
             android:text="Currently in Cart:"
-            android:layout_margin="5dip">
+            android:textColor="#000000"
+            android:textSize="20dip">
 
         </TextView>
 
     </LinearLayout>
 
 
-    <LinearLayout android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayoutAddLayout"
 
         android:layout_width="fill_parent"
-        android:id="@+id/linearLayoutAddLayout"
-        android:orientation="horizontal"
-        android:layout_margin="5dip">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dip"
+        android:orientation="horizontal">
+
 
         <TextView
             android:id="@+id/textView1"
-
-        android:layout_width="fill_parent" android:id="@+id/linearLayoutAddLayout"
-        android:orientation="horizontal" android:layout_margin="5dip">
-        <TextView android:id="@+id/textView1"
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -97,22 +89,25 @@
 
 
         </TextView>
+
         <EditText
 
+            android:id="@+id/editTextQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="1"
 
             android:gravity="right"
-            android:id="@+id/editTextQuantity"
-            android:inputType="number">
+            android:inputType="number"
+            android:text="1">
 
         </EditText>
-        <Button android:id="@+id/ButtonAddToCart"
-            android:layout_gravity="right"
-            android:layout_height="wrap_content"
+
+        <Button
+            android:id="@+id/ButtonAddToCart"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:text="Set Quantity">
 
         </Button>
@@ -120,6 +115,5 @@
 
     </LinearLayout>
 
-    </LinearLayout>
-
 </LinearLayout>
+
