Styled the mainActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     layout_height=""
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/primary"
     android:fitsSystemWindows="true">
 
     <LinearLayout
@@ -96,46 +96,10 @@
                         <include layout="@layout/category_layout" />
                     </LinearLayout>
 
-                    <ScrollView
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/listVendorsRecyclerView"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="10dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <include layout="@layout/card_item_home" />
-
-                                <include layout="@layout/card_item_home" />
-
-                                <include layout="@layout/card_item_home" />
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <include layout="@layout/card_item_home" />
-
-                                <include layout="@layout/card_item_home" />
-                            </LinearLayout>
-                        </LinearLayout>
-                    </ScrollView>
-
-                    <HorizontalScrollView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                    </HorizontalScrollView>
+                        android:layout_height="match_parent" />
 
                 </LinearLayout>
             </RelativeLayout>
