--- a/app/src/main/res/layout/card_item_home.xml
+++ b/app/src/main/res/layout/card_item_home.xml
@@ -1,37 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="100dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="5dp">
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="5dp">
 
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:background="@color/bg_gray"
-            android:src="@drawable/img1" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="5dp">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/mama_wa_estate_default_store_image" />
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/vendorsName"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lenovo Ideapad 310 laptop"
+            android:layout_gravity="center"
+            android:text="Ibrahim's Electronics"
+            android:textAlignment="center"
             android:textColor="@color/black"
+            android:textSize="13sp" />
+
+        <TextView
+            android:id="@+id/vendorsLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawableStart="@drawable/ic_baseline_location_on_24"
+            android:text=" Moi Avenue "
+            android:textColor="@color/hint"
             android:textSize="12sp" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/vendorsCategory"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="30,000"
-            android:textColor="@color/colorAccent"
+            android:layout_gravity="center"
+            android:drawableStart="@drawable/ic_baseline_category_12"
+            android:text=" Category"
             android:textSize="12sp" />
 
     </LinearLayout>
+
+
 </androidx.cardview.widget.CardView>
