--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,8 @@
     <color name="gray_lite">#649f9f9f</color>
 
     <color name="secondary">#B3DCE8</color>
-    <color name="primary">#f3f3f3</color>
+    <color name="primary">#F3F3F3</color>
+
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
