Consolidated the work

--- a/app/src/main/res/layout/shoppingcart.xml
+++ b/app/src/main/res/layout/shoppingcart.xml
@@ -39,7 +39,8 @@
         android:id="@+id/LinearLayoutCheckout"
         android:layout_gravity="right">
 
-        <Button android:id="@+id/Button02"
+        <Button
+            android:id="@+id/ProceedToCheckout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Proceed to Checkout">
