--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -41,22 +41,29 @@
                 app:srcCompat="@drawable/ic_baseline_my_location_24" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <fragment
-            android:id="@+id/autocomplete_fragment"
-            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="113dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp">
 
-        </fragment>
+            <fragment
+                android:id="@+id/autocomplete_fragment"
+                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/proceedButton"
-            android:layout_width="262dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Proceed"
-            tools:layout_editor_absoluteX="133dp"
-            tools:layout_editor_absoluteY="667dp" />
+            </fragment>
+
+            <Button
+                android:id="@+id/proceedButton"
+                android:layout_width="262dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Proceed"
+                tools:layout_editor_absoluteX="133dp"
+                tools:layout_editor_absoluteY="667dp" />
+        </LinearLayout>
 
     </LinearLayout>
 
