--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:id="@+id/drawer_layout"
     layout_height=""
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     android:background="@color/primary"
     android:fitsSystemWindows="true">
 
@@ -19,40 +19,49 @@
 
         <include layout="@layout/toolbar_layout" />
 
-            <RelativeLayout
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/mainHome"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="visible">
 
-                <LinearLayout
-                    android:id="@+id/mainHome"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:visibility="visible">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:padding="5dp"
+                    app:cardCornerRadius="7.5dp">
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="300dp"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_margin="10dp"
-                        android:padding="5dp"
-                        app:cardCornerRadius="7.5dp">
+                        android:orientation="vertical"
+                        android:padding="5dp">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:id="@+id/textView7"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:drawableEnd="@drawable/ic_baseline_my_location_24"
+                            android:padding="5dp"
+                            android:text="Your Location "
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/textView7"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:drawableEnd="@drawable/ic_baseline_my_location_24"
-                                android:padding="5dp"
-                                android:text="Your Location "
-                                android:textSize="14sp"
-                                android:textStyle="bold" />
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="5dp"
+                            app:cardBackgroundColor="@color/bg_gray"
+                            app:cardCornerRadius="7.5dp">
 
                             <TextView
                                 android:id="@+id/textLocation"
@@ -60,7 +69,17 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:padding="5dp"
-                                android:text="TextView" />
+                                android:text="TextView"
+                                android:textColor="@color/black" />
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="3dp"
+                            app:cardBackgroundColor="@color/secondary"
+                            app:cardCornerRadius="7.5dp">
 
                             <TextView
                                 android:id="@+id/ChangeYourLocation"
@@ -70,35 +89,38 @@
                                 android:text="Change Your Location"
                                 android:textAlignment="center"
                                 android:textColor="@color/purple_700" />
-                        </LinearLayout>
+                        </androidx.cardview.widget.CardView>
 
-                    </androidx.cardview.widget.CardView>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/textView8"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="Categories"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-
-                        <include layout="@layout/category_layout" />
                     </LinearLayout>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/listVendorsRecyclerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                </androidx.cardview.widget.CardView>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Categories"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <include layout="@layout/category_layout" />
                 </LinearLayout>
-            </RelativeLayout>
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/listVendorsRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="779dp"
+                    android:background="@drawable/main_card"
+                    android:padding="10dp" />
+
+            </LinearLayout>
+        </RelativeLayout>
 
 
     </LinearLayout>
