--- a/app/src/main/res/layout/catalog_topbar.xml
+++ b/app/src/main/res/layout/catalog_topbar.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageViewCheckout"
+            android:id="@+id/imageViewCatalog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -20,12 +20,15 @@
             app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textViewProductCatalogHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CHECKOUT"
+            android:layout_gravity="center"
+            android:text="Product Catalog"
             android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold" />
+
     </LinearLayout>
+
 </RelativeLayout>
