--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:scrollbarSize="1dp">
+    android:scrollbarSize="0.5dp"
+    android:scrollbarStyle="outsideOverlay">
 
     <LinearLayout
         android:layout_width="wrap_content"
