--- a/app/src/main/res/layout/productdetails.xml
+++ b/app/src/main/res/layout/productdetails.xml
@@ -1,124 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#ffffff"
-    android:gravity="center"
-    android:layoutAnimation="@android:anim/slide_in_left"
-    android:orientation="vertical"
-    app:flow_firstHorizontalStyle="spread">
-
-    <LinearLayout
-
-        android:id="@+id/LinearLayoutHeader"
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        app:cardBackgroundColor="#55CA79"
+        app:cardCornerRadius="7.5dp"
+        app:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/ImageViewProduct"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dip"
-            android:adjustViewBounds="true"
-            android:scaleType="center"
-            android:src="@drawable/shoe">
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="#ffffff"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp">
 
-        </ImageView>
+            <LinearLayout
 
-        <TextView
-            android:id="@+id/TextViewProductTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dip"
-            android:text="The best shoe around."
-            android:textColor="#000000"
-            android:textSize="26dip">
+                android:id="@+id/LinearLayoutHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        </TextView>
+                <ImageView
+                    android:id="@+id/ImageViewProduct"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/shoe">
 
-    </LinearLayout>
+                </ImageView>
 
-    <TextView
-        android:id="@+id/TextViewProductDetails"
+                <TextView
+                    android:id="@+id/TextViewProductTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="The best shoe around."
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="26dip">
 
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_margin="5dip"
-        android:layout_weight="1"
-        android:text="Product description"
+                </TextView>
 
-        android:textColor="#000000">
+            </LinearLayout>
 
-    </TextView>
+            <TextView
+                android:id="@+id/TextViewProductDetails"
 
-    <LinearLayout
-        android:id="@+id/linearLayoutCurrentlyInCart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
 
-    </LinearLayout>
+                android:layout_marginBottom="5dp"
+                android:text="Product description"
+                android:textColor="@color/gray">
 
-
-    <LinearLayout
-        android:id="@+id/linearLayoutAddLayout"
-
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dip"
-        android:orientation="horizontal">
-
-
-        <EditText
-
-            android:id="@+id/editTextQuantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-
-            android:gravity="right"
-            android:inputType="number"
-            android:text="1">
-
-        </EditText>
-
-        <Button
-            android:id="@+id/ButtonAddToCart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="Set Quantity">
-
-        </Button>
+            </TextView>
 
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearLayoutAddLayout"
 
-    <TextView
-        android:id="@+id/textViewCurrentlyInCart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dip"
-        android:text="Currently in Cart:"
-        android:textColor="#000000"
-        android:textSize="20dip">
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/textView1"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Quantity:"
-        android:textColor="#000000">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:padding="5dp">
 
 
-    </TextView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardAdd"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
+                    app:cardBackgroundColor="#439B5E">
 
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:id="@+id/imageView4"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:srcCompat="@drawable/ic_baseline_add_24" />
+                    </androidx.cardview.widget.CardView>
+
+                </androidx.cardview.widget.CardView>
+
+                <EditText
+
+                    android:id="@+id/editTextQuantity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:inputType="number"
+                    android:text="1">
+
+                </EditText>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardMinus"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
+                    app:cardBackgroundColor="#CA5555">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:srcCompat="@drawable/ic_baseline_remove_24" />
+                    </androidx.cardview.widget.CardView>
+
+                </androidx.cardview.widget.CardView>
+
+                <Button
+                    android:id="@+id/ButtonAddToCart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_margin="5dp"
+                    android:text="Set Quantity">
+
+                </Button>
+
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textViewCurrentlyInCart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dip"
+                android:text="Currently in Cart:"
+                android:textColor="#000000"
+                android:textSize="20dip">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/textView1"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quantity:"
+                android:textColor="#000000">
+
+
+            </TextView>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
+
+
 
