--- a/app/src/main/res/layout/shoppingcart.xml
+++ b/app/src/main/res/layout/shoppingcart.xml
@@ -1,53 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_height="fill_parent"
     android:layout_width="fill_parent" android:background="#ffffff">
 
-    <TextView
-        android:id="@+id/TextView01"
+    <include
+        layout="@layout/shopping_cart_topbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="24dip"
-        android:layout_margin="5dip"
-        android:text="Shopping Cart">
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="7.5dp">
 
-    </TextView>
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dip"
-        android:text="Click on a product to edit the quantity">
-
-    </TextView>
-    <ListView android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:id="@+id/ListViewCatalog"
-        android:layout_width="fill_parent"
-        android:background="#ffffff"
-        android:cacheColorHint="#ffffff"
-        android:clickable="true"
-        android:choiceMode="multipleChoice">
-
-    </ListView>
-
-    <LinearLayout android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="5dip"
-        android:id="@+id/LinearLayoutCheckout"
-        android:layout_gravity="right">
-
-        <Button
-            android:id="@+id/ProceedToCheckout"
+        <TextView
+            android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Proceed to Checkout">
+            android:layout_gravity="center"
+            android:layout_margin="5dip"
+            android:padding="3dp"
+            android:text="Click on a product to edit the quantity">
 
-        </Button>
+        </TextView>
+    </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionViewCheckout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:clickable="true"
+            app:backgroundTint="@color/bg_gray"
+            app:srcCompat="@drawable/ic_baseline_logout_24" />
+
+        <ListView
+            android:id="@+id/ListViewCatalog"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/main_card"
+            android:choiceMode="multipleChoice"
+            android:clickable="true"
+            android:divider="@color/secondary"
+            android:scrollbarSize="0.5dp"/>
+
+    </RelativeLayout>
 
 
 </LinearLayout>
