--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:scrollbarSize="1dp">
+    android:scrollbarSize="0.5dp"
+    android:scrollbarStyle="outsideOverlay">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
         android:orientation="horizontal"
         android:padding="5dp">
 
@@ -25,8 +25,8 @@
 
 
             <androidx.cardview.widget.CardView
-                android:layout_width="100dp"
-                android:layout_height="50dp"
+                android:layout_width="70dp"
+                android:layout_height="20dp"
                 android:onClick="filter"
                 android:tag="All"
                 app:cardBackgroundColor="#4C5058"
@@ -51,7 +51,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="100dp"
-                android:layout_height="30dp"
+                android:layout_height="20dp"
                 android:onClick="filter"
                 android:tag="Food"
                 app:cardBackgroundColor="#E3BBB4"
@@ -74,7 +74,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="100dp"
-                android:layout_height="30dp"
+                android:layout_height="20dp"
                 android:onClick="filter"
                 android:tag="Clothing"
                 app:cardBackgroundColor="#D9D9D9"
@@ -96,7 +96,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="100dp"
-                android:layout_height="30dp"
+                android:layout_height="20dp"
                 android:onClick="filter"
                 android:padding="3dp"
                 android:tag="Pharmacy"
@@ -119,7 +119,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="100dp"
-                android:layout_height="30dp"
+                android:layout_height="20dp"
                 android:onClick="filter"
                 android:tag="Electronics"
                 app:cardBackgroundColor="#B7EC9E"
@@ -142,7 +142,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="100dp"
-                android:layout_height="30dp"
+                android:layout_height="20dp"
                 android:onClick="filter"
                 android:tag="Services"
                 app:cardBackgroundColor="#30A8B7"
@@ -165,7 +165,8 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="100dp"
-                android:layout_height="30dp"
+                android:layout_height="20dp"
+                android:onClick="filter"
                 android:tag="General"
                 app:cardBackgroundColor="@color/gray"
                 app:cardCornerRadius="5dp"
