--- a/app/src/main/res/layout/shopping_cart_topbar.xml
+++ b/app/src/main/res/layout/shopping_cart_topbar.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageViewCheckout"
+            android:id="@+id/imageViewShoppingCart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -23,7 +23,7 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CHECKOUT"
+            android:text="SHOPPING CART"
             android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold" />
