--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/quantum_cyan50"
+    android:background="@color/secondary"
     tools:context="com.mamawaestate.android.SplashActivity">
 
     <TextView
@@ -14,15 +14,21 @@
         android:layout_marginBottom="49dp"
         android:text="@string/app_name"
         android:textColor="@color/colorAccent"
-        android:textSize="45sp"
+        android:textSize="36sp"
         android:textStyle="bold|italic" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:contentDescription="@drawable/bg_log"
+        android:layout_margin="20dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:cropToPadding="true"
+        android:padding="15dp"
         android:scaleType="center"
         android:src="@drawable/logo_mama_wa_estate" />
 </RelativeLayout>
