--- a/app/src/main/res/layout/vendorregistor.xml
+++ b/app/src/main/res/layout/vendorregistor.xml
@@ -15,14 +15,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/black"
-            android:fontFamily="@font/alice"
             android:padding="20dp"
             android:text="@string/registration"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="25sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,7 +35,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp"
-                android:fontFamily="@font/alice"
                 android:text="@string/select_what_you_own"
                 android:textSize="20sp"
                 android:textStyle="bold" />
