--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,6 +130,7 @@
         android:layout_width="350dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@drawable/drawer"
         android:fitsSystemWindows="true">
 
         <include layout="@layout/nav_layout" />
