--- a/app/src/main/res/layout/nav_layout.xml
+++ b/app/src/main/res/layout/nav_layout.xml
@@ -13,7 +13,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/secondary"
         android:src="@drawable/user"
         app:view_borderColor="@color/colorPrimaryDark"
         app:view_borderWidth="3dp" />
@@ -32,9 +32,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="20dp"
         android:background="@color/colorPrimaryDark" />
 
     <TextView
@@ -50,7 +50,7 @@
         android:padding="10dp"
         android:text=" Home"
         android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textSize="24sp" />
 
 
     <TextView
@@ -66,7 +66,7 @@
         android:padding="10dp"
         android:text=" My Cart"
         android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textSize="24sp" />
 
 
     <LinearLayout
@@ -84,13 +84,12 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
-        android:drawableStart="@drawable/ic_baseline_power_settings_new_24"
-        android:drawableLeft="@drawable/ic_action_logout"
+        android:drawableStart="@drawable/ic_baseline_logout_24"
         android:gravity="center|start"
         android:padding="10dp"
         android:text=" Log out"
         android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textSize="24sp" />
 
 
 </LinearLayout>
