--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -54,7 +54,8 @@
                     android:id="@+id/textViewCurrentLocation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Current Location" />
+                    android:text="Current Location"
+                    android:textAlignment="center" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
